--- a/.env.production
+++ b/.env.production
@@ -14,7 +14,7 @@ CLOUDINARY_API_KEY="your-cloudinary-api-key"
 CLOUDINARY_API_SECRET="your-cloudinary-api-secret"
 
 # Frontend URLs
-FRONTEND_URL="https://assesium-working-landing-webpage-v1.vercel.app/"
+FRONTEND_URL="https://assesium-working-landing-webpage-v1-two.vercel.app"
 DEPLOYED_FRONTEND_URL="https://assesium.vercel.app"
 
 # Server Configuration
